<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F2F2F2"
    android:fitsSystemWindows="true"
    tools:context="com.austinhle.represent.MainActivity">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="Droid Sans"
            android:textSize="28sp"
            android:textColor="#4F4F4F"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:paddingTop="20dp"/>

        <TextView
            android:id="@+id/enter_zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter zip code:"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/welcome"
            android:layout_marginTop="75dp"/>

        <EditText
            android:id="@+id/zip_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_zip_code"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="100dp"
            android:background="#F2F2F2"
            android:inputType="number"
            android:hint="00000"
            android:textColor="#2D9CDB"
            android:textColorHint="#2D9CDB"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/zip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/zip_code"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:background="#6FCF97"
            android:text="@string/use_zip_code"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/loc_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/zip_btn"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:background="#BB6BD9"
            android:text="@string/use_current_location"
            android:textColor="@color/black"/>

</RelativeLayout>