<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailed_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/democrat"
    android:fitsSystemWindows="true"
    tools:context="com.austinhle.represent.DetailedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/cImage1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".4"
                        android:layout_margin="2dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/boxer"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:id="@+id/cContent1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:orientation="vertical"
                        android:layout_margin="5dp">

                        <TextView
                            android:id="@+id/cName1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name1"
                            android:textSize="20dp"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/cPosition1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sen"
                            android:textSize="16dp"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/cParty1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/democrat"
                            android:textSize="16dp"
                            android:textColor="@color/democrat" />

                        <TextView
                            android:id="@+id/term"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="75dp"
                            android:text="@string/term"
                            android:textSize="16dp"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:id="@+id/committees"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardBackgroundColor="@color/gray"
                    card_view:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/committees_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:paddingBottom="10dp"
                            android:text="@string/committees"
                            android:textSize="18dp"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/c1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="Select Committee on Ethics"
                            android:textSize="12dp"
                            android:textColor="@color/democrat" />

                        <TextView
                            android:id="@+id/c2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="Committee on Environment and Public Works"
                            android:textSize="12dp"
                            android:textColor="@color/democrat" />

                        <TextView
                            android:id="@+id/c3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="Committee on Foreign Relations"
                            android:textSize="12dp"
                            android:textColor="@color/democrat" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/bills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardBackgroundColor="@color/gray"
                    card_view:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/bills_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:paddingBottom="10dp"
                            android:text="@string/recent_bills"
                            android:textSize="18dp"
                            android:textColor="@color/black" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:id="@+id/bills_list"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/b1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="10dp"
                                    android:text="Female Veteran Prevention Suicide Act"
                                    android:textSize="12dp"
                                    android:textColor="@color/democrat" />

                                <TextView
                                    android:id="@+id/b2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="10dp"
                                    android:text="Tule Lake National Historic Site Establish..."
                                    android:textSize="12dp"
                                    android:textColor="@color/democrat" />

                                <TextView
                                    android:id="@+id/b3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="10dp"
                                    android:text="End of Suffering Act"
                                    android:textSize="12dp"
                                    android:textColor="@color/democrat" />

                                <TextView
                                    android:id="@+id/b4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="10dp"
                                    android:text="SAFE DRONE Act"
                                    android:textSize="12dp"
                                    android:textColor="@color/democrat" />

                                <TextView
                                    android:id="@+id/b5"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="10dp"
                                    android:text="West Coast Ocean Protection Act"
                                    android:textSize="12dp"
                                    android:textColor="@color/democrat" />

                                <TextView
                                    android:id="@+id/b6"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="10dp"
                                    android:text="Pell Grant Restoration Act"
                                    android:textSize="12dp"
                                    android:textColor="@color/democrat" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/dates_list"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/d1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="3dp"
                                    android:paddingEnd="3dp"
                                    android:text="02/03/16"
                                    android:textSize="12dp"
                                    android:textColor="@color/black" />

                                <TextView
                                    android:id="@+id/d2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="3dp"
                                    android:paddingEnd="3dp"
                                    android:text="12/17/15"
                                    android:textSize="12dp"
                                    android:textColor="@color/black" />

                                <TextView
                                    android:id="@+id/d3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="3dp"
                                    android:paddingEnd="3dp"
                                    android:text="10/22/15"
                                    android:textSize="12dp"
                                    android:textColor="@color/black" />

                                <TextView
                                    android:id="@+id/d4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="3dp"
                                    android:paddingEnd="3dp"
                                    android:text="10/07/15"
                                    android:textSize="12dp"
                                    android:textColor="@color/black" />

                                <TextView
                                    android:id="@+id/d5"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="3dp"
                                    android:paddingEnd="3dp"
                                    android:text="10/07/15"
                                    android:textSize="12dp"
                                    android:textColor="@color/black" />

                                <TextView
                                    android:id="@+id/d6"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="3dp"
                                    android:paddingEnd="3dp"
                                    android:text="09/16/15"
                                    android:textSize="12dp"
                                    android:textColor="@color/black" />
                            </LinearLayout>
                        </RelativeLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>